Migrate to influxdb 2.0

--- a/tonkoslovie-application/src/main/resources/application.yml
+++ b/tonkoslovie-application/src/main/resources/application.yml
@@ -120,9 +120,12 @@ management:
       influx:
         enabled: ${INFLUXDB_ENABLED:false}
         db: tonkoslovie
+        org: tonkoslovie
+        bucket: tonkoslovie
         uri: ${INFLUXDB_URI}
         user-name: ${INFLUXDB_USER}
         password: ${INFLUXDB_PASSWORD}
+        token: ${INFLUXDB_ADMIN_TOKEN}
         step: 10s
 
 logging:
