--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       INFLUXDB_ENABLED: 'true'
       INFLUXDB_URI: http://influxdb:8086
       INFLUXDB_USER: ${INFLUXDB_USER:-admin}
-      INFLUXDB_PASSWORD: ${INFLUXDB_PASSWORD:-1234}
+      INFLUXDB_PASSWORD: ${INFLUXDB_PASSWORD:-12345678}
+      INFLUXDB_ADMIN_TOKEN: ${INFLUXDB_ADMIN_TOKEN:-token}
       KAFKA_HOST: kafka
       KAFKA_PORT: 9092
       OAUTH_GOOGLE_CLIENT_ID: ${OAUTH_GOOGLE_CLIENT_ID:-test}
@@ -156,13 +157,15 @@ services:
       retries: 5
 
   influxdb:
-    image: influxdb:1.7-alpine
+    image: influxdb:2.0-alpine
     container_name: tonkoslovie_influxdb
     environment:
-      INFLUXDB_ADMIN_USER: ${INFLUXDB_USER:-admin}
-      INFLUXDB_ADMIN_PASSWORD: ${INFLUXDB_PASSWORD:-1234}
-      INFLUXDB_HTTP_AUTH_ENABLED: 'true'
-      INFLUXDB_HTTP_LOG_ENABLED: 'false'
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_ORG: tonkoslovie
+      DOCKER_INFLUXDB_INIT_BUCKET: tonkoslovie
+      DOCKER_INFLUXDB_INIT_USERNAME: ${INFLUXDB_USER:-admin}
+      DOCKER_INFLUXDB_INIT_PASSWORD: ${INFLUXDB_PASSWORD:-12345678}
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${INFLUXDB_ADMIN_TOKEN:-token}
     ports:
       - 127.0.0.1:8086:8086
     healthcheck:
