Add influxdb api version

--- a/tonkoslovie-application/src/main/resources/application.yml
+++ b/tonkoslovie-application/src/main/resources/application.yml
@@ -127,6 +127,7 @@ management:
         password: ${INFLUXDB_PASSWORD}
         token: ${INFLUXDB_ADMIN_TOKEN}
         step: 10s
+        api-version: v2
 
 logging:
   pattern:
