--- a/tonkoslovie-application/src/main/resources/application.yml
+++ b/tonkoslovie-application/src/main/resources/application.yml
@@ -128,6 +128,8 @@ management:
         token: ${INFLUXDB_ADMIN_TOKEN}
         step: 10s
         api-version: v2
+    tags:
+      service.name: ${SERVICE_NAME:application.test}
 
 logging:
   pattern:
