--- a/tonkoslovie-mail/pom.xml
+++ b/tonkoslovie-mail/pom.xml
@@ -74,6 +74,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Metrics -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-influx</artifactId>
+        </dependency>
+
         <!-- Other -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
