--- a/docker-compose.support.yml
+++ b/docker-compose.support.yml
@@ -1,4 +1,4 @@
-version: '2.3'
+version: '3.8'
 
 services:
   sonarqube:
@@ -11,3 +11,16 @@ services:
     - ./docker_volumes/sonarqube/extensions:/opt/sonarqube/extensions
     ports:
       - 9001:9000
+
+  grafana:
+    image: grafana/grafana:8.0.6
+    container_name: tonkoslovie_grafana
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD:-1234}
+      INFLUXDB_ADMIN_TOKEN: ${INFLUXDB_ADMIN_TOKEN:-token}
+    ports:
+      - 3001:3000
+    volumes:
+      - ./metrics/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - ./metrics/grafana/dashboard.yml:/etc/grafana/provisioning/dashboards/dashboard.yml
+      - ./metrics/grafana/dashboards:/etc/grafana/provisioning/dashboards
