Add hibernate-types library, change jsonb type

--- a/tonkoslovie-application/pom.xml
+++ b/tonkoslovie-application/pom.xml
@@ -138,6 +138,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-55</artifactId>
+            <version>2.12.1</version>
+        </dependency>
 
         <!-- JWT -->
         <dependency>
