--- a/tonkoslovie-application/src/main/resources/application.yml
+++ b/tonkoslovie-application/src/main/resources/application.yml
@@ -23,9 +23,7 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        dialect: ru.romanov.tonkoslovie.hibernate.JsonPostgresDialect
-        temp:
-          use_jdbc_metadata_defaults: false
+        types.print.banner: false
 
   liquibase:
     change-log: classpath:db/changelog.yml
