Extract media service, add minio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,7 +93,7 @@ services:
       retries: 5
 
   nginx:
-    image: nginx
+    image: nginx:1.22.1
     container_name: tonkoslovie_nginx
     ports:
       - "127.0.0.1:8080:8080"
@@ -160,6 +160,7 @@ services:
       - "127.0.0.1:8083:8083"
     healthcheck:
       test: "curl -f localhost:8083/connectors/ || exit 1"
+      start_period: 1m
       interval: 10s
       timeout: 3s
       retries: 5
@@ -205,12 +206,33 @@ services:
     environment:
       xpack.security.enabled: 'false'
       discovery.type: single-node
+      ES_JAVA_OPTS: -Xmx500m
     ports:
       - "127.0.0.1:9200:9200"
     volumes:
       - ./docker_volumes/elastic:/usr/share/elasticsearch/data
     healthcheck:
       test: [ "CMD-SHELL", "curl -s http://elastic:9200 >/dev/null || exit 1" ]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+
+  minio:
+    image: bitnami/minio:2022.12.2
+    container_name: tonkoslovie_minio
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-tonkoslovie}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-12345678}
+      MINIO_SERVER_ACCESS_KEY: ${MINIO_SERVER_ACCESS_KEY:-tonkoslovie}
+      MINIO_SERVER_SECRET_KEY: ${MINIO_SERVER_SECRET_KEY:-12345678}
+      MINIO_DEFAULT_BUCKETS: tonkoslovie-media
+    ports:
+      - "127.0.0.1:9005:9000"
+      - "127.0.0.1:9006:9001"
+    volumes:
+      - ./docker_volumes/minio/data:/data
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 10s
       timeout: 3s
       retries: 5
