--- a/docker/nginx/cors.conf
+++ b/docker/nginx/cors.conf
@@ -1,10 +1,10 @@
-add_header 'Access-Control-Allow-Origin' $front_host;
+add_header 'Access-Control-Allow-Origin' $front_host always;
 add_header 'Access-Control-Allow-Credentials' 'true';
 add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
 add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
 if ($request_method = 'OPTIONS') {
-  add_header 'Access-Control-Allow-Origin' $front_host;
+  add_header 'Access-Control-Allow-Origin' $front_host always;
   add_header 'Access-Control-Allow-Credentials' 'true';
   add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
   add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
