--- a/docker/nginx/nginx_local.conf
+++ b/docker/nginx/nginx_local.conf
@@ -3,14 +3,17 @@ events {
 }
 
 http {
+  proxy_cache_path /data/nginx/cache keys_zone=static_cache:60m max_size=200m;
+
   server {
     listen 0.0.0.0:8080;
     root /usr/share/nginx/html/;
     server_tokens off;
+    client_max_body_size 20M;
 
     set $front_host 'http://localhost:3000';
 
-    location ~ ^/api/(content|media|user) {
+    location ~ ^/api/(content|user|oauth) {
       proxy_pass http://host.docker.internal:8081;
       include cors.conf;
     }
@@ -18,6 +21,15 @@ http {
     location /api/audits {
       proxy_pass http://host.docker.internal:8082;
       include cors.conf;
+    }
+
+    location /api/media {
+      proxy_pass http://host.docker.internal:8083;
+      include cors.conf;
+      expires max;
+
+      proxy_cache static_cache;
+      proxy_cache_valid any 1m;
     }
   }
 }
