--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,33 +3,44 @@ events {
 }
 
 http {
+  proxy_cache_path /data/nginx/cache keys_zone=static_cache:60m max_size=200m;
+
   server {
     listen 0.0.0.0:443;
     root /app/;
     server_tokens off;
+    client_max_body_size 20M;
 
-    ssl    on;
-    ssl_certificate    /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem;
-    ssl_certificate_key       /etc/letsencrypt/live/tonkoslovie.ru/privkey.pem;
+    ssl on;
+    ssl_certificate /etc/letsencrypt/live/tonkoslovie.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tonkoslovie.ru/privkey.pem;
     server_name tonkoslovie.ru;
 
-    location /api {
-        proxy_pass http://127.0.0.1:8080;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    location ~ ^/api/(content|user|oauth) {
+      proxy_pass http://host.docker.internal:8081;
+      include cors.conf;
     }
 
-    location /tonkoslovie {
-      expires 30d;
+    location /api/media {
+      proxy_pass http://host.docker.internal:8082;
+      include cors.conf;
+      expires max;
+
+      proxy_cache static_cache;
+      proxy_cache_valid any 1m;
+    }
+
+    location /api/audits {
+      proxy_pass http://host.docker.internal:8083;
+      include cors.conf;
     }
     
     location / {
-        proxy_pass http://127.0.0.1:3000;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        expires max;
+        proxy_pass http://host.docker.internal:3000;
     }
   }
 
