--- a/docker/nginx/nginx_local.conf
+++ b/docker/nginx/nginx_local.conf
@@ -18,18 +18,46 @@ http {
       include cors.conf;
     }
 
-    location /api/audits {
+    location /api/media {
       proxy_pass http://host.docker.internal:8082;
+      include cors.conf;
+
+      expires max;
+      proxy_cache static_cache;
+      proxy_cache_valid any 1m;
+    }
+
+    location /api/audits {
+      proxy_pass http://host.docker.internal:8083;
+      include cors.conf;
+    }
+  }
+
+  server {
+    listen 0.0.0.0:7080;
+    root /usr/share/nginx/html/;
+    server_tokens off;
+    client_max_body_size 20M;
+
+    set $front_host 'http://localhost:3000';
+
+    location ~ ^/api/(content|user|oauth) {
+      proxy_pass http://host.docker.internal:7081;
       include cors.conf;
     }
 
     location /api/media {
-      proxy_pass http://host.docker.internal:8083;
+      proxy_pass http://host.docker.internal:7082;
       include cors.conf;
-      expires max;
 
+      expires max;
       proxy_cache static_cache;
       proxy_cache_valid any 1m;
+    }
+
+    location /api/audits {
+      proxy_pass http://host.docker.internal:7083;
+      include cors.conf;
     }
   }
 }
