--- a/tonkoslovie-media/pom.xml
+++ b/tonkoslovie-media/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>tonkoslovie</artifactId>
         <groupId>ru.romanov</groupId>
-        <version>0.2</version>
+        <version>0.3</version>
     </parent>
 
     <artifactId>tonkoslovie-media</artifactId>
@@ -18,6 +18,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <runImage>paketobuildpacks/run:full-cnb</runImage>
                     <imageName>tonkoslovie_media</imageName>
                 </configuration>
             </plugin>
@@ -52,6 +53,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- Temporary fix for startup error -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
 
         <!-- Metrics -->
