Update dependency versions

--- a/tonkoslovie-audit/pom.xml
+++ b/tonkoslovie-audit/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>ru.romanov</groupId>
             <artifactId>tonkoslovie-model</artifactId>
-            <version>0.2</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
